# learn-unsloth-lab

./: .gitignore  CHANGELOG.md  README.md  assessment.md  completed-upgrades.md  pyproject.toml  requirements.txt
configs/: deepseek-qlora.yaml  evaluation.yaml  example-training.yaml  export-gguf.yaml  finance-evaluation.yaml  finance-export.yaml  finance-lora.yaml  gemma-lora.yaml  hyperparameter-sweep.yaml  llama-qlora.yaml  model-comparison.yaml  ollama.yaml  qwen-lora.yaml
datasets/: README.md  alpaca-sample.json  chatml-sample.jsonl  finance-instructions.jsonl  sharegpt-sample.json
docs/: README.md  cli-reference.md  dashboard.md  dataset-guide.md  evaluation-guide.md  experiment-tracking.md  export-guide.md  faq.md  finance-lab.md  first-run.md  github-spec.md  glossary.md  hyperparameter-lab.md  install.md  model-comparison-lab.md  ollama-guide.md  quickstart.md  release-notes-v1.md  roadmap.md  sample-datasets.md  testing.md  training-guide.md  troubleshooting.md  windows-setup.md
experiments/: README.md
exports/: README.md
notebooks/: 01-first-fine-tune.ipynb  02-dataset-formatting.ipynb  03-qlora-training.ipynb  04-evaluation.ipynb  05-gguf-export.ipynb  README.md
scripts/: README.md  init-experiments-db.ps1
tests/: conftest.py  test_cli.py  test_config.py  test_dashboard_data.py  test_dashboard_render.py  test_dataset_conversion.py  test_dataset_validation.py  test_evaluation_metrics.py  test_evaluation_reports.py  test_experiment_reports.py  test_experiment_store.py  test_export_config.py  test_export_dry_run.py  test_finance_lab_assets.py  (+13 more)
(+40 files in other folders)
